--- a/Generate Training Data.ipynb
+++ b/Generate Training Data.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "import tensorflow as tf\n",
     "import numpy as np\n",
-    "from tensorflow.io import gfile\n",
+    "from tensorflow import io\n",
     "import tensorflow_io as tfio\n",
     "from tensorflow.python.ops import gen_audio_ops as audio_ops\n",
     "from tqdm.notebook import tqdm\n",
@@ -45,54 +45,20 @@
     "# list of folders we want to process in the speech_data folder\n",
     "from tensorflow.python.ops import gen_audio_ops as audio_ops\n",
     "words = [\n",
-    "    'backward',\n",
-    "    'bed',\n",
-    "    'bird',\n",
-    "    'cat',\n",
     "    'dog',\n",
-    "    'down',\n",
-    "    'eight',\n",
-    "    'five',\n",
-    "    'follow',\n",
-    "    'forward',\n",
-    "    'four',\n",
-    "    'go',\n",
-    "    'happy',\n",
-    "    'house',\n",
-    "    'learn',\n",
-    "    'left',\n",
-    "    'marvin',\n",
-    "    'nine',\n",
-    "    'no',\n",
-    "    'off',\n",
-    "    'on',\n",
-    "    'one',\n",
-    "    'right',\n",
-    "    'seven',\n",
-    "    'sheila',\n",
-    "    'six',\n",
-    "    'stop',\n",
-    "    'three',\n",
-    "    'tree',\n",
-    "    'two',\n",
-    "    'up',\n",
-    "    'visual',\n",
-    "    'wow',\n",
-    "    'yes',\n",
-    "    'zero',\n",
-    "    '_background',\n",
+    "    'other'\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# get all the files in a directory\n",
     "def get_files(word):\n",
-    "    return gfile.glob(SPEECH_DATA + '/'+word+'/*.wav')\n",
+    "    return tf.io.gfile.glob(SPEECH_DATA + '/'+word+'/*.wav')\n",
     "\n",
     "# get the location of the voice\n",
     "def get_voice_position(audio, noise_floor):\n",
@@ -1157,7 +1123,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
